modified fb_login file name

--- a/views/fbLogin.jade
+++ b/views/fbLogin.jade
@@ -5,7 +5,7 @@ a.href("/") FB Login
 
 .fb-login-button(data-show-faces='true', data-width='200', data-max-rows='1', size="large", onclick='dummyFunc();', id='login') Get Connected
 	
-script(src='/js/fbLogin.js') 
+script(src='/js/fb_login.js') 
 
 	
 
