--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,9 @@
+
 extends layout
 
 
 block content
+
 	.container-fluid
 		.row-fluid
 			.span3
@@ -10,7 +12,18 @@ block content
 			.span9
 				form.form-horizontal(method='post', enctype='multipart/form-data', action='/fileUpload')
 					input.input-large(type="file",name="firstUpload")
-					input(type='submit')
+					input(type='submit', value="Submit")
+
+			//if filePath!=null
+				//img(src=filePath)
+
+
+				input(type="text", placeholder=file)
+		if file!=null
+			img(src='../downloads/slash-s3.jpg')
+
+	img(src='../downloads/slash-s3.jpg')
+					
 
 					
 
